Hierarchy and navigation desktop

--- a/services/aqua.html
+++ b/services/aqua.html
@@ -4,17 +4,17 @@
   <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aqua — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="Aqua review: Hot Wallet for Spend Bitcoin. Non-custodial (keys stored on your device). No KYC required. Compare fees, features, and setup guide."/>
+  <title>Aqua Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin</title>
+  <meta name="description" content="Aqua review 2025: Hot Wallet for Spend Bitcoin. Non-custodial (keys stored on your device). No KYC required. Compare fees, features & setup guide."/>
   <link rel="canonical" href="https://buoybitcoin.com/services/aqua.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/aqua.html"/>
-  <meta property="og:title" content="Aqua — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="Aqua review: Hot Wallet for Spend Bitcoin. Non-custodial (keys stored on your device). No KYC required. Compare fees, features, and setup guide."/>
+  <meta property="og:title" content="Aqua Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta property="og:description" content="Aqua review 2025: Hot Wallet for Spend Bitcoin. Non-custodial (keys stored on your device). No KYC required. Compare fees, features & setup guide."/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Aqua — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="Aqua review: Hot Wallet for Spend Bitcoin. Non-custodial (keys stored on your device). No KYC required. Compare fees, features, and setup guide."/>
+  <meta name="twitter:title" content="Aqua Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="Aqua review 2025: Hot Wallet for Spend Bitcoin. Non-custodial (keys stored on your device). No KYC required. Compare fees, features & setup guide."/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=10">
@@ -43,7 +43,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/aqua.html#webpage","name":"Aqua — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/aqua.html","inLanguage":"en","description":"Aqua review: Hot Wallet for Spend Bitcoin. Non-custodial (keys stored on your device). No KYC required. Compare fees, features, and setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/aqua.html#service"},"dateModified":"2025-11-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","@id":"https://buoybitcoin.com/services/aqua.html#service","name":"Aqua","url":"https://aquawallet.io","mainEntityOfPage":"https://buoybitcoin.com/services/aqua.html#webpage","description":"Aqua is JAN3's mobile wallet that keeps Bitcoin, Liquid, and Lightning funds in one place. The app is self-custodial, so you write down a 12-word seed and control every transaction. Aqua leans on Liq…","image":"https://buoybitcoin.com/images/aqua.svg","applicationCategory":"Spend Bitcoin","areaServed":"Worldwide","downloadUrl":"https://apps.apple.com/us/app/aqua-wallet/id6468594241","operatingSystem":"iOS, Android","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Aqua","url":"https://aquawallet.io"},"datePublished":"2024-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/aqua.html#webpage","name":"Aqua Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/aqua.html","inLanguage":"en","description":"Aqua review 2025: Hot Wallet for Spend Bitcoin. Non-custodial (keys stored on your device). No KYC required. Compare fees, features & setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/aqua.html#service"},"dateModified":"2025-11-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","@id":"https://buoybitcoin.com/services/aqua.html#service","name":"Aqua","url":"https://aquawallet.io","mainEntityOfPage":"https://buoybitcoin.com/services/aqua.html#webpage","description":"Aqua is JAN3's mobile wallet that keeps Bitcoin, Liquid, and Lightning funds in one place. The app is self-custodial, so you write down a 12-word seed and control every transaction. Aqua leans on Liq…","image":"https://buoybitcoin.com/images/aqua.svg","applicationCategory":"Spend Bitcoin","areaServed":"Worldwide","downloadUrl":"https://apps.apple.com/us/app/aqua-wallet/id6468594241","operatingSystem":"iOS, Android","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Aqua","url":"https://aquawallet.io"},"datePublished":"2024-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Aqua","item":"https://buoybitcoin.com/services/aqua.html"}]}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"Getting started with Aqua","description":"Step-by-step guide to set up and start using Aqua.","url":"https://buoybitcoin.com/services/aqua.html#setup","step":[{"@type":"HowToStep","position":1,"name":"1. Install and create your wallet","text":"Download Aqua from the App Store or Google Play Create a new wallet and write the 12-word seed on paper Add an optional passphrase if you want an extra layer","description":"Time: ~5 min","image":{"@type":"ImageObject","url":"https://buoybitcoin.com/images/screenshots/aqua-install.webp"}},{"@type":"HowToStep","position":2,"name":"2. Add funds","text":"Choose Receive and pick Bitcoin, Liquid, or Lightning For large on-chain deposits, use Direct Peg-in to land funds directly as L-BTC Wait for confirmations before spending","description":"Time: ~10 min","image":{"@type":"ImageObject","url":"https://buoybitcoin.com/images/screenshots/aqua-receive.webp"}},{"@type":"HowToStep","position":3,"name":"3. Pay or swap","text":"Tap Send and pick Lightning, Bitcoin, or USDt Review the quoted fee before confirming Use the swap screen to bridge USDt to other chains if required","description":"Time: ~1-3 min","image":{"@type":"ImageObject","url":"https://buoybitcoin.com/images/screenshots/aqua-pay.webp"}}],"estimatedCost":{"@type":"MonetaryAmount","currency":"USD","value":"0"}}</script></head>
 <body>
   <div class="container">
@@ -124,7 +124,7 @@
 </header>
  <main>
   <div class="category-header category-header--vs">
-   <h1 id="page-title">Aqua</h1>
+   <h1 id="page-title">Aqua<span class="visually-hidden"> Review: Fees, Features & Setup Guide</span></h1>
 <div class="page-updated" data-updated="2025-11-01">Updated: November 2025</div>
   </div>
 <div class="breadcrumb-back"><a href="/spend-bitcoin.html">< Back to Spend Bitcoin</a></div>
@@ -134,6 +134,10 @@
     <li><a href="/spend-bitcoin.html">Spend Bitcoin</a></li>
     <li><span aria-current="page">Aqua</span></li>
   </ol>
+</nav>
+
+<nav class="jump-nav" aria-label="Jump to">
+  <a href="/services/aqua.html#setup">Setup</a> • <a href="/services/aqua.html#fees">Fees</a> • <a href="/services/aqua.html#compat">Features</a> • <a href="/services/aqua.html#migration">Migration</a> • <a href="/services/aqua.html#privacy-safety">Privacy</a> • <a href="/services/aqua.html#trust">Trust</a> • <a href="/services/aqua.html#faq-heading">FAQs</a>
 </nav>
   <!-- BUILD:START -->
 <div class="service-sticky-cta">
@@ -266,60 +270,6 @@
     </dl>
   </details>
 
-</section>
-
-<section id="privacy-safety" class="service-section" aria-labelledby="privacy-safety-label">
-  <h2 id="privacy-safety-label" class="feature-label">Privacy & Safety</h2>
-  <div class="privacy-cards">
-    <div class="privacy-card" id="data-flows">
-      <h3>Who can see what when you use Aqua</h3>
-      <ul><li>Aqua does not log payments on JAN3 servers, but third-party swaps (Boltz, SideShift, Changelly) see the amounts they process.</li><li>Optional JAN3 accounts (for services like Dolphin) store your email only; no password is kept.</li><li>App store billing and crash reports still follow Apple and Google policies.</li></ul>
-      <div class="dodont-strip"><div class="dodont-item dodont-do"><img src="/images/checkmark.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Do:</strong> Audit swap quotes and only share support details with providers you trust.</span></div><div class="dodont-item dodont-dont"><img src="/images/cross.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Don't:</strong> Assume swaps or Lightning transactions are invisible. Providers learn the amounts they route.</span></div></div>
-    </div>
-    <div class="privacy-card" id="recovery">
-      <h3>Lost your phone? How Aqua recovery works</h3>
-      <ul><li>Seed lives solely on your device; JAN3 cannot recover it if you lose it.</li><li>To restore, install Aqua on a new phone, choose Restore Wallet, and enter the 12 words (plus passphrase if set).</li><li>If Boltz fails to settle, Aqua shows a Refund button so you can reclaim the funds.</li></ul>
-      <div class="dodont-strip"><div class="dodont-item dodont-do"><img src="/images/checkmark.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Do:</strong> Store the seed somewhere dry and offline; consider adding the optional passphrase if you share the device.</span></div><div class="dodont-item dodont-dont"><img src="/images/cross.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Don't:</strong> Never screenshot or cloud-sync the seed.</span></div></div>
-    </div>
-    <div class="privacy-card" id="availability">
-      <h3>Availability &amp; safe installs</h3>
-      <ul><li>Dolphin Card roll-out is phased; some regions cannot apply yet.</li><li>Swap partners may block certain countries based on compliance rules.</li><li>Install updates promptly. New builds often address security and fee issues.</li></ul>
-    </div>
-  </div>
-    <div class="micro-faqs">
-      <h3 class="micro-faqs__title">Quick answers</h3>
-      <div class="micro-faqs__list">
-      <details class="micro-faq-item" id="does-aqua-collect-analytics">
-        <summary>Does Aqua collect analytics?</summary>
-        <div>
-          <p>No. The wallet ships without analytics. Only optional services gather the email you volunteer.</p>
-        </div>
-      </details>
-      <details class="micro-faq-item" id="can-jan3-recover-my-wallet-if-i-lose-the-seed">
-        <summary>Can JAN3 recover my wallet if I lose the seed?</summary>
-        <div>
-          <p>No. The seed stays local, so recovery is entirely your responsibility.</p>
-        </div>
-      </details>
-      <details class="micro-faq-item" id="what-happens-if-a-lightning-swap-fails">
-        <summary>What happens if a Lightning swap fails?</summary>
-        <div>
-          <p>Boltz automatically refunds your Liquid balance. If it stalls, use the Refund button or contact the provider with the swap ID.</p>
-        </div>
-      </details>
-      </div>
-    </div>
-    <details class="mini-glossary">
-      <summary>Key terms</summary>
-      <dl>
-      <dt id="jan3-account">JAN3 account</dt>
-      <dd>An optional email login for services like the Dolphin Card; not required for basic wallet use.</dd>
-      <dt id="confidential-transaction">Confidential transaction</dt>
-      <dd>A Liquid feature that hides amounts while keeping addresses auditable.</dd>
-      <dt id="swap-provider">Swap provider</dt>
-      <dd>A third party (Boltz, SideShift, Changelly) that converts between networks for you.</dd>
-      </dl>
-    </details>
 </section>
 
 <section id="compat" class="service-section">
@@ -462,6 +412,60 @@
         </details>
       </div>
   </div>
+</section>
+
+<section id="privacy-safety" class="service-section" aria-labelledby="privacy-safety-label">
+  <h2 id="privacy-safety-label" class="feature-label">Privacy & Safety</h2>
+  <div class="privacy-cards">
+    <div class="privacy-card" id="data-flows">
+      <h3>Who can see what when you use Aqua</h3>
+      <ul><li>Aqua does not log payments on JAN3 servers, but third-party swaps (Boltz, SideShift, Changelly) see the amounts they process.</li><li>Optional JAN3 accounts (for services like Dolphin) store your email only; no password is kept.</li><li>App store billing and crash reports still follow Apple and Google policies.</li></ul>
+      <div class="dodont-strip"><div class="dodont-item dodont-do"><img src="/images/checkmark.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Do:</strong> Audit swap quotes and only share support details with providers you trust.</span></div><div class="dodont-item dodont-dont"><img src="/images/cross.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Don't:</strong> Assume swaps or Lightning transactions are invisible. Providers learn the amounts they route.</span></div></div>
+    </div>
+    <div class="privacy-card" id="recovery">
+      <h3>Lost your phone? How Aqua recovery works</h3>
+      <ul><li>Seed lives solely on your device; JAN3 cannot recover it if you lose it.</li><li>To restore, install Aqua on a new phone, choose Restore Wallet, and enter the 12 words (plus passphrase if set).</li><li>If Boltz fails to settle, Aqua shows a Refund button so you can reclaim the funds.</li></ul>
+      <div class="dodont-strip"><div class="dodont-item dodont-do"><img src="/images/checkmark.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Do:</strong> Store the seed somewhere dry and offline; consider adding the optional passphrase if you share the device.</span></div><div class="dodont-item dodont-dont"><img src="/images/cross.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Don't:</strong> Never screenshot or cloud-sync the seed.</span></div></div>
+    </div>
+    <div class="privacy-card" id="availability">
+      <h3>Availability &amp; safe installs</h3>
+      <ul><li>Dolphin Card roll-out is phased; some regions cannot apply yet.</li><li>Swap partners may block certain countries based on compliance rules.</li><li>Install updates promptly. New builds often address security and fee issues.</li></ul>
+    </div>
+  </div>
+    <div class="micro-faqs">
+      <h3 class="micro-faqs__title">Quick answers</h3>
+      <div class="micro-faqs__list">
+      <details class="micro-faq-item" id="does-aqua-collect-analytics">
+        <summary>Does Aqua collect analytics?</summary>
+        <div>
+          <p>No. The wallet ships without analytics. Only optional services gather the email you volunteer.</p>
+        </div>
+      </details>
+      <details class="micro-faq-item" id="can-jan3-recover-my-wallet-if-i-lose-the-seed">
+        <summary>Can JAN3 recover my wallet if I lose the seed?</summary>
+        <div>
+          <p>No. The seed stays local, so recovery is entirely your responsibility.</p>
+        </div>
+      </details>
+      <details class="micro-faq-item" id="what-happens-if-a-lightning-swap-fails">
+        <summary>What happens if a Lightning swap fails?</summary>
+        <div>
+          <p>Boltz automatically refunds your Liquid balance. If it stalls, use the Refund button or contact the provider with the swap ID.</p>
+        </div>
+      </details>
+      </div>
+    </div>
+    <details class="mini-glossary">
+      <summary>Key terms</summary>
+      <dl>
+      <dt id="jan3-account">JAN3 account</dt>
+      <dd>An optional email login for services like the Dolphin Card; not required for basic wallet use.</dd>
+      <dt id="confidential-transaction">Confidential transaction</dt>
+      <dd>A Liquid feature that hides amounts while keeping addresses auditable.</dd>
+      <dt id="swap-provider">Swap provider</dt>
+      <dd>A third party (Boltz, SideShift, Changelly) that converts between networks for you.</dd>
+      </dl>
+    </details>
 </section>
 
 <section id="trust" class="service-section">
