--- a/services/unchained.html
+++ b/services/unchained.html
@@ -4,17 +4,17 @@
   <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unchained — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="Unchained review: Collaborative custody for Store it safely. Collaborative custody (2-of-3 multisig). Compare fees, features, and setup guide."/>
+  <title>Unchained Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin</title>
+  <meta name="description" content="Unchained review 2025: Collaborative custody for Store it safely. Collaborative custody (2-of-3 multisig). Compare fees, features & setup guide."/>
   <link rel="canonical" href="https://buoybitcoin.com/services/unchained.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/unchained.html"/>
-  <meta property="og:title" content="Unchained — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="Unchained review: Collaborative custody for Store it safely. Collaborative custody (2-of-3 multisig). Compare fees, features, and setup guide."/>
+  <meta property="og:title" content="Unchained Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta property="og:description" content="Unchained review 2025: Collaborative custody for Store it safely. Collaborative custody (2-of-3 multisig). Compare fees, features & setup guide."/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Unchained — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="Unchained review: Collaborative custody for Store it safely. Collaborative custody (2-of-3 multisig). Compare fees, features, and setup guide."/>
+  <meta name="twitter:title" content="Unchained Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="Unchained review 2025: Collaborative custody for Store it safely. Collaborative custody (2-of-3 multisig). Compare fees, features & setup guide."/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=10">
@@ -43,7 +43,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/unchained.html#webpage","name":"Unchained — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/unchained.html","inLanguage":"en","description":"Unchained review: Collaborative custody for Store it safely. Collaborative custody (2-of-3 multisig). Compare fees, features, and setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/unchained.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/unchained.html#service","name":"Unchained","url":"https://unchained.com","mainEntityOfPage":"https://buoybitcoin.com/services/unchained.html#webpage","description":"Unchained is a Bitcoin financial services company focused on helping individuals and businesses secure their Bitcoin through collaborative custody. Their main product is a multisig vault that uses a…","image":"https://buoybitcoin.com/images/unchained.svg","serviceType":"Store it safely","areaServed":[{"@type":"Country","identifier":"US"}],"offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Unchained","url":"https://unchained.com"},"datePublished":"2016-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/unchained.html#webpage","name":"Unchained Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/unchained.html","inLanguage":"en","description":"Unchained review 2025: Collaborative custody for Store it safely. Collaborative custody (2-of-3 multisig). Compare fees, features & setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/unchained.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/unchained.html#service","name":"Unchained","url":"https://unchained.com","mainEntityOfPage":"https://buoybitcoin.com/services/unchained.html#webpage","description":"Unchained is a Bitcoin financial services company focused on helping individuals and businesses secure their Bitcoin through collaborative custody. Their main product is a multisig vault that uses a…","image":"https://buoybitcoin.com/images/unchained.svg","serviceType":"Store it safely","areaServed":[{"@type":"Country","identifier":"US"}],"offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Unchained","url":"https://unchained.com"},"datePublished":"2016-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Store it safely","item":"https://buoybitcoin.com/store-it-safely.html"},{"@type":"ListItem","position":3,"name":"Unchained","item":"https://buoybitcoin.com/services/unchained.html"}]}</script></head>
 <body>
   <div class="container">
@@ -124,7 +124,7 @@
 </header>
  <main>
   <div class="category-header category-header--vs">
-   <h1 id="page-title">Unchained</h1>
+   <h1 id="page-title">Unchained<span class="visually-hidden"> Review: Fees, Features & Setup Guide</span></h1>
 <div class="page-updated" data-updated="2025-10-25">Updated: October 2025</div>
   </div>
 <div class="breadcrumb-back"><a href="/store-it-safely.html">< Back to Store it safely</a></div>
@@ -134,6 +134,10 @@
     <li><a href="/store-it-safely.html">Store it safely</a></li>
     <li><span aria-current="page">Unchained</span></li>
   </ol>
+</nav>
+
+<nav class="jump-nav" aria-label="Jump to">
+  <a href="/services/unchained.html#faq-heading">FAQs</a>
 </nav>
   <!-- BUILD:START -->
 <div class="service-sticky-cta">
