--- a/services/btc-pay.html
+++ b/services/btc-pay.html
@@ -4,17 +4,17 @@
   <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BTC Pay — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="BTC Pay review: Hosted payment gateway for Accept Bitcoin as a merchant. Non-custodial. No KYC required. Compare fees, features, and setup guide."/>
+  <title>BTC Pay Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin</title>
+  <meta name="description" content="BTC Pay review 2025: Hosted payment gateway for Accept Bitcoin as a merchant. Non-custodial. No KYC required. Compare fees, features & setup guide."/>
   <link rel="canonical" href="https://buoybitcoin.com/services/btc-pay.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/btc-pay.html"/>
-  <meta property="og:title" content="BTC Pay — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="BTC Pay review: Hosted payment gateway for Accept Bitcoin as a merchant. Non-custodial. No KYC required. Compare fees, features, and setup guide."/>
+  <meta property="og:title" content="BTC Pay Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta property="og:description" content="BTC Pay review 2025: Hosted payment gateway for Accept Bitcoin as a merchant. Non-custodial. No KYC required. Compare fees, features & setup guide."/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="BTC Pay — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="BTC Pay review: Hosted payment gateway for Accept Bitcoin as a merchant. Non-custodial. No KYC required. Compare fees, features, and setup guide."/>
+  <meta name="twitter:title" content="BTC Pay Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="BTC Pay review 2025: Hosted payment gateway for Accept Bitcoin as a merchant. Non-custodial. No KYC required. Compare fees, features & setup guide."/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=10">
@@ -43,7 +43,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/btc-pay.html#webpage","name":"BTC Pay — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/btc-pay.html","inLanguage":"en","description":"BTC Pay review: Hosted payment gateway for Accept Bitcoin as a merchant. Non-custodial. No KYC required. Compare fees, features, and setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/btc-pay.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/btc-pay.html#service","name":"BTC Pay","url":"https://btcpayserver.org","mainEntityOfPage":"https://buoybitcoin.com/services/btc-pay.html#webpage","description":"BTC Pay Server, developed by a community-driven open-source project, is a self-hosted Bitcoin payment processor designed to empower merchants and individuals to accept Bitcoin payments securely and p…","image":"https://buoybitcoin.com/images/btc-pay.svg","serviceType":"Accept Bitcoin as a merchant","areaServed":"Worldwide","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"BTC Pay","url":"https://btcpayserver.org"},"datePublished":"2017-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/btc-pay.html#webpage","name":"BTC Pay Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/btc-pay.html","inLanguage":"en","description":"BTC Pay review 2025: Hosted payment gateway for Accept Bitcoin as a merchant. Non-custodial. No KYC required. Compare fees, features & setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/btc-pay.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/btc-pay.html#service","name":"BTC Pay","url":"https://btcpayserver.org","mainEntityOfPage":"https://buoybitcoin.com/services/btc-pay.html#webpage","description":"BTC Pay Server, developed by a community-driven open-source project, is a self-hosted Bitcoin payment processor designed to empower merchants and individuals to accept Bitcoin payments securely and p…","image":"https://buoybitcoin.com/images/btc-pay.svg","serviceType":"Accept Bitcoin as a merchant","areaServed":"Worldwide","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"BTC Pay","url":"https://btcpayserver.org"},"datePublished":"2017-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Accept Bitcoin as a merchant","item":"https://buoybitcoin.com/accept-bitcoin-as-a-merchant.html"},{"@type":"ListItem","position":3,"name":"BTC Pay","item":"https://buoybitcoin.com/services/btc-pay.html"}]}</script></head>
 <body>
   <div class="container">
@@ -124,7 +124,7 @@
 </header>
  <main>
   <div class="category-header category-header--vs">
-   <h1 id="page-title">BTC Pay</h1>
+   <h1 id="page-title">BTC Pay<span class="visually-hidden"> Review: Fees, Features & Setup Guide</span></h1>
 <div class="page-updated" data-updated="2025-10-25">Updated: October 2025</div>
   </div>
 <div class="breadcrumb-back"><a href="/accept-bitcoin-as-a-merchant.html">< Back to Accept Bitcoin as a merchant</a></div>
@@ -134,6 +134,10 @@
     <li><a href="/accept-bitcoin-as-a-merchant.html">Accept Bitcoin as a merchant</a></li>
     <li><span aria-current="page">BTC Pay</span></li>
   </ol>
+</nav>
+
+<nav class="jump-nav" aria-label="Jump to">
+  <a href="/services/btc-pay.html#faq-heading">FAQs</a>
 </nav>
   <!-- BUILD:START -->
 <div class="service-sticky-cta">
