--- a/services/bull-bitcoin.html
+++ b/services/bull-bitcoin.html
@@ -4,17 +4,17 @@
   <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bull Bitcoin — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="Bull Bitcoin review: Non-custodial for Buy Bitcoin. Non-custodial. No KYC required. Compare fees, features, and setup guide."/>
+  <title>Bull Bitcoin Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin</title>
+  <meta name="description" content="Bull Bitcoin review 2025: Non-custodial for Buy Bitcoin. Non-custodial. No KYC required. Compare fees, features & setup guide."/>
   <link rel="canonical" href="https://buoybitcoin.com/services/bull-bitcoin.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/bull-bitcoin.html"/>
-  <meta property="og:title" content="Bull Bitcoin — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="Bull Bitcoin review: Non-custodial for Buy Bitcoin. Non-custodial. No KYC required. Compare fees, features, and setup guide."/>
+  <meta property="og:title" content="Bull Bitcoin Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta property="og:description" content="Bull Bitcoin review 2025: Non-custodial for Buy Bitcoin. Non-custodial. No KYC required. Compare fees, features & setup guide."/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Bull Bitcoin — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="Bull Bitcoin review: Non-custodial for Buy Bitcoin. Non-custodial. No KYC required. Compare fees, features, and setup guide."/>
+  <meta name="twitter:title" content="Bull Bitcoin Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="Bull Bitcoin review 2025: Non-custodial for Buy Bitcoin. Non-custodial. No KYC required. Compare fees, features & setup guide."/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=10">
@@ -43,7 +43,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/bull-bitcoin.html#webpage","name":"Bull Bitcoin — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/bull-bitcoin.html","inLanguage":"en","description":"Bull Bitcoin review: Non-custodial for Buy Bitcoin. Non-custodial. No KYC required. Compare fees, features, and setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/bull-bitcoin.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/bull-bitcoin.html#service","name":"Bull Bitcoin","url":"https://www.bullbitcoin.com","mainEntityOfPage":"https://buoybitcoin.com/services/bull-bitcoin.html#webpage","description":"Bull Bitcoin is a Canadian Bitcoin exchange that stands out by being entirely non-custodial, meaning users must provide their own wallet and take full ownership of their Bitcoin. It allows users to b…","image":"https://buoybitcoin.com/images/bull-bitcoin.svg","serviceType":"Buy Bitcoin","areaServed":[{"@type":"Country","identifier":"CA"},{"@type":"Country","identifier":"EU"},{"@type":"Country","identifier":"CR"},{"@type":"Country","identifier":"MX"}],"offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Bull Bitcoin","url":"https://www.bullbitcoin.com"},"datePublished":"2013-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/bull-bitcoin.html#webpage","name":"Bull Bitcoin Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/bull-bitcoin.html","inLanguage":"en","description":"Bull Bitcoin review 2025: Non-custodial for Buy Bitcoin. Non-custodial. No KYC required. Compare fees, features & setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/bull-bitcoin.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/bull-bitcoin.html#service","name":"Bull Bitcoin","url":"https://www.bullbitcoin.com","mainEntityOfPage":"https://buoybitcoin.com/services/bull-bitcoin.html#webpage","description":"Bull Bitcoin is a Canadian Bitcoin exchange that stands out by being entirely non-custodial, meaning users must provide their own wallet and take full ownership of their Bitcoin. It allows users to b…","image":"https://buoybitcoin.com/images/bull-bitcoin.svg","serviceType":"Buy Bitcoin","areaServed":[{"@type":"Country","identifier":"CA"},{"@type":"Country","identifier":"EU"},{"@type":"Country","identifier":"CR"},{"@type":"Country","identifier":"MX"}],"offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Bull Bitcoin","url":"https://www.bullbitcoin.com"},"datePublished":"2013-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Buy Bitcoin","item":"https://buoybitcoin.com/buy-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Bull Bitcoin","item":"https://buoybitcoin.com/services/bull-bitcoin.html"}]}</script></head>
 <body>
   <div class="container">
@@ -124,7 +124,7 @@
 </header>
  <main>
   <div class="category-header category-header--vs">
-   <h1 id="page-title">Bull Bitcoin</h1>
+   <h1 id="page-title">Bull Bitcoin<span class="visually-hidden"> Review: Fees, Features & Setup Guide</span></h1>
 <div class="page-updated" data-updated="2025-10-25">Updated: October 2025</div>
   </div>
 <div class="breadcrumb-back"><a href="/buy-bitcoin.html">< Back to Buy Bitcoin</a></div>
@@ -134,6 +134,10 @@
     <li><a href="/buy-bitcoin.html">Buy Bitcoin</a></li>
     <li><span aria-current="page">Bull Bitcoin</span></li>
   </ol>
+</nav>
+
+<nav class="jump-nav" aria-label="Jump to">
+  <a href="/services/bull-bitcoin.html#faq-heading">FAQs</a>
 </nav>
   <!-- BUILD:START -->
 <div class="service-sticky-cta">
