--- a/services/lightspark.html
+++ b/services/lightspark.html
@@ -4,17 +4,17 @@
   <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lightspark — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="Lightspark review: Payment Infrastructure for Accept Bitcoin as a merchant. Flexible: Supports self-custodial wallets via Spark; Managed nodes for enterprises.…"/>
+  <title>Lightspark Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin</title>
+  <meta name="description" content="Lightspark review 2025: Payment Infrastructure for Accept Bitcoin as a merchant. Flexible: Supports self-custodial wallets via Spark; Managed nodes for enterpr…"/>
   <link rel="canonical" href="https://buoybitcoin.com/services/lightspark.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/lightspark.html"/>
-  <meta property="og:title" content="Lightspark — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="Lightspark review: Payment Infrastructure for Accept Bitcoin as a merchant. Flexible: Supports self-custodial wallets via Spark; Managed nodes for enterprises.…"/>
+  <meta property="og:title" content="Lightspark Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta property="og:description" content="Lightspark review 2025: Payment Infrastructure for Accept Bitcoin as a merchant. Flexible: Supports self-custodial wallets via Spark; Managed nodes for enterpr…"/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Lightspark — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="Lightspark review: Payment Infrastructure for Accept Bitcoin as a merchant. Flexible: Supports self-custodial wallets via Spark; Managed nodes for enterprises.…"/>
+  <meta name="twitter:title" content="Lightspark Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="Lightspark review 2025: Payment Infrastructure for Accept Bitcoin as a merchant. Flexible: Supports self-custodial wallets via Spark; Managed nodes for enterpr…"/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=10">
@@ -43,7 +43,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/lightspark.html#webpage","name":"Lightspark — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/lightspark.html","inLanguage":"en","description":"Lightspark review: Payment Infrastructure for Accept Bitcoin as a merchant. Flexible: Supports self-custodial wallets via Spark; Managed nodes for enterprises.…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/lightspark.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/lightspark.html#service","name":"Lightspark","url":"https://www.lightspark.com","mainEntityOfPage":"https://buoybitcoin.com/services/lightspark.html#webpage","description":"Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the \"Money Grid,\" a global, open payment network…","image":"https://buoybitcoin.com/images/lightspark.svg","serviceType":"Accept Bitcoin as a merchant","areaServed":"Worldwide","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Lightspark","url":"https://www.lightspark.com"},"datePublished":"2022-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/lightspark.html#webpage","name":"Lightspark Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/lightspark.html","inLanguage":"en","description":"Lightspark review 2025: Payment Infrastructure for Accept Bitcoin as a merchant. Flexible: Supports self-custodial wallets via Spark; Managed nodes for enterpr…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/lightspark.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/lightspark.html#service","name":"Lightspark","url":"https://www.lightspark.com","mainEntityOfPage":"https://buoybitcoin.com/services/lightspark.html#webpage","description":"Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the \"Money Grid,\" a global, open payment network…","image":"https://buoybitcoin.com/images/lightspark.svg","serviceType":"Accept Bitcoin as a merchant","areaServed":"Worldwide","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Lightspark","url":"https://www.lightspark.com"},"datePublished":"2022-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Accept Bitcoin as a merchant","item":"https://buoybitcoin.com/accept-bitcoin-as-a-merchant.html"},{"@type":"ListItem","position":3,"name":"Lightspark","item":"https://buoybitcoin.com/services/lightspark.html"}]}</script></head>
 <body>
   <div class="container">
@@ -124,7 +124,7 @@
 </header>
  <main>
   <div class="category-header category-header--vs">
-   <h1 id="page-title">Lightspark</h1>
+   <h1 id="page-title">Lightspark<span class="visually-hidden"> Review: Fees, Features & Setup Guide</span></h1>
 <div class="page-updated" data-updated="2025-10-25">Updated: October 2025</div>
   </div>
 <div class="breadcrumb-back"><a href="/accept-bitcoin-as-a-merchant.html">< Back to Accept Bitcoin as a merchant</a></div>
@@ -134,6 +134,10 @@
     <li><a href="/accept-bitcoin-as-a-merchant.html">Accept Bitcoin as a merchant</a></li>
     <li><span aria-current="page">Lightspark</span></li>
   </ol>
+</nav>
+
+<nav class="jump-nav" aria-label="Jump to">
+  <a href="/services/lightspark.html#faq-heading">FAQs</a>
 </nav>
   <!-- BUILD:START -->
 <div class="service-sticky-cta">
