--- a/services/opennode.html
+++ b/services/opennode.html
@@ -4,17 +4,17 @@
   <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OpenNode — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="OpenNode review: Payment Processor for Accept Bitcoin as a merchant. Custodial (until withdrawal or automatic settlement). Compare fees, features, and setup gu…"/>
+  <title>OpenNode Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin</title>
+  <meta name="description" content="OpenNode review 2025: Payment Processor for Accept Bitcoin as a merchant. Custodial (until withdrawal or automatic settlement). Compare fees, features & setup…"/>
   <link rel="canonical" href="https://buoybitcoin.com/services/opennode.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/opennode.html"/>
-  <meta property="og:title" content="OpenNode — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="OpenNode review: Payment Processor for Accept Bitcoin as a merchant. Custodial (until withdrawal or automatic settlement). Compare fees, features, and setup gu…"/>
+  <meta property="og:title" content="OpenNode Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta property="og:description" content="OpenNode review 2025: Payment Processor for Accept Bitcoin as a merchant. Custodial (until withdrawal or automatic settlement). Compare fees, features & setup…"/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="OpenNode — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="OpenNode review: Payment Processor for Accept Bitcoin as a merchant. Custodial (until withdrawal or automatic settlement). Compare fees, features, and setup gu…"/>
+  <meta name="twitter:title" content="OpenNode Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="OpenNode review 2025: Payment Processor for Accept Bitcoin as a merchant. Custodial (until withdrawal or automatic settlement). Compare fees, features & setup…"/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=10">
@@ -43,7 +43,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/opennode.html#webpage","name":"OpenNode — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/opennode.html","inLanguage":"en","description":"OpenNode review: Payment Processor for Accept Bitcoin as a merchant. Custodial (until withdrawal or automatic settlement). Compare fees, features, and setup gu…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/opennode.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/opennode.html#service","name":"OpenNode","url":"https://opennode.com","mainEntityOfPage":"https://buoybitcoin.com/services/opennode.html#webpage","description":"OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted checkouts, or its developer-friendly AP…","image":"https://buoybitcoin.com/images/opennode.svg","serviceType":"Accept Bitcoin as a merchant","areaServed":"Worldwide","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"OpenNode","url":"https://opennode.com"},"datePublished":"2018-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/opennode.html#webpage","name":"OpenNode Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/opennode.html","inLanguage":"en","description":"OpenNode review 2025: Payment Processor for Accept Bitcoin as a merchant. Custodial (until withdrawal or automatic settlement). Compare fees, features & setup…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/opennode.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/opennode.html#service","name":"OpenNode","url":"https://opennode.com","mainEntityOfPage":"https://buoybitcoin.com/services/opennode.html#webpage","description":"OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted checkouts, or its developer-friendly AP…","image":"https://buoybitcoin.com/images/opennode.svg","serviceType":"Accept Bitcoin as a merchant","areaServed":"Worldwide","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"OpenNode","url":"https://opennode.com"},"datePublished":"2018-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Accept Bitcoin as a merchant","item":"https://buoybitcoin.com/accept-bitcoin-as-a-merchant.html"},{"@type":"ListItem","position":3,"name":"OpenNode","item":"https://buoybitcoin.com/services/opennode.html"}]}</script></head>
 <body>
   <div class="container">
@@ -124,7 +124,7 @@
 </header>
  <main>
   <div class="category-header category-header--vs">
-   <h1 id="page-title">OpenNode</h1>
+   <h1 id="page-title">OpenNode<span class="visually-hidden"> Review: Fees, Features & Setup Guide</span></h1>
 <div class="page-updated" data-updated="2025-10-25">Updated: October 2025</div>
   </div>
 <div class="breadcrumb-back"><a href="/accept-bitcoin-as-a-merchant.html">< Back to Accept Bitcoin as a merchant</a></div>
@@ -134,6 +134,10 @@
     <li><a href="/accept-bitcoin-as-a-merchant.html">Accept Bitcoin as a merchant</a></li>
     <li><span aria-current="page">OpenNode</span></li>
   </ol>
+</nav>
+
+<nav class="jump-nav" aria-label="Jump to">
+  <a href="/services/opennode.html#faq-heading">FAQs</a>
 </nav>
   <!-- BUILD:START -->
 <div class="service-sticky-cta">
