--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -4,17 +4,17 @@
   <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Phoenix — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="Phoenix review: Hot Wallet for Spend Bitcoin. Non-custodial (runs Lightning node). No KYC required. Compare fees, features, and setup guide."/>
+  <title>Phoenix Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin</title>
+  <meta name="description" content="Phoenix review 2025: Hot Wallet for Spend Bitcoin. Non-custodial (runs Lightning node). No KYC required. Compare fees, features & setup guide."/>
   <link rel="canonical" href="https://buoybitcoin.com/services/phoenix.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/phoenix.html"/>
-  <meta property="og:title" content="Phoenix — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="Phoenix review: Hot Wallet for Spend Bitcoin. Non-custodial (runs Lightning node). No KYC required. Compare fees, features, and setup guide."/>
+  <meta property="og:title" content="Phoenix Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta property="og:description" content="Phoenix review 2025: Hot Wallet for Spend Bitcoin. Non-custodial (runs Lightning node). No KYC required. Compare fees, features & setup guide."/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Phoenix — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="Phoenix review: Hot Wallet for Spend Bitcoin. Non-custodial (runs Lightning node). No KYC required. Compare fees, features, and setup guide."/>
+  <meta name="twitter:title" content="Phoenix Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="Phoenix review 2025: Hot Wallet for Spend Bitcoin. Non-custodial (runs Lightning node). No KYC required. Compare fees, features & setup guide."/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=10">
@@ -43,7 +43,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/phoenix.html#webpage","name":"Phoenix — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/phoenix.html","inLanguage":"en","description":"Phoenix review: Hot Wallet for Spend Bitcoin. Non-custodial (runs Lightning node). No KYC required. Compare fees, features, and setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/phoenix.html#service"},"dateModified":"2025-10-03"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","@id":"https://buoybitcoin.com/services/phoenix.html#service","name":"Phoenix","url":"https://phoenix.acinq.co","mainEntityOfPage":"https://buoybitcoin.com/services/phoenix.html#webpage","description":"Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of use for beginners.\\n\\nPhoenix runs a nativ…","image":"https://buoybitcoin.com/images/phoenix.svg","applicationCategory":"Spend Bitcoin","areaServed":"Worldwide","downloadUrl":"https://apps.apple.com/app/phoenix-wallet/id1544097028","operatingSystem":"iOS, Android","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Phoenix","url":"https://phoenix.acinq.co"},"datePublished":"2019-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/phoenix.html#webpage","name":"Phoenix Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/phoenix.html","inLanguage":"en","description":"Phoenix review 2025: Hot Wallet for Spend Bitcoin. Non-custodial (runs Lightning node). No KYC required. Compare fees, features & setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/phoenix.html#service"},"dateModified":"2025-10-03"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","@id":"https://buoybitcoin.com/services/phoenix.html#service","name":"Phoenix","url":"https://phoenix.acinq.co","mainEntityOfPage":"https://buoybitcoin.com/services/phoenix.html#webpage","description":"Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of use for beginners.\\n\\nPhoenix runs a nativ…","image":"https://buoybitcoin.com/images/phoenix.svg","applicationCategory":"Spend Bitcoin","areaServed":"Worldwide","downloadUrl":"https://apps.apple.com/app/phoenix-wallet/id1544097028","operatingSystem":"iOS, Android","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Phoenix","url":"https://phoenix.acinq.co"},"datePublished":"2019-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Phoenix","item":"https://buoybitcoin.com/services/phoenix.html"}]}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"Getting started with Phoenix","description":"Step-by-step guide to set up and start using Phoenix.","url":"https://buoybitcoin.com/services/phoenix.html#setup","step":[{"@type":"HowToStep","position":1,"name":"1. Install and secure your wallet","text":"Install Phoenix from App Store or Google Play Write down your 12-word seed on paper and store it away from your device Enable biometric lock on your phone","description":"Time: ~5 min","image":{"@type":"ImageObject","url":"https://buoybitcoin.com/images/screenshots/phoenix-install.webp"}},{"@type":"HowToStep","position":2,"name":"2. Receive your first sats","text":"Tap Receive to generate a Lightning invoice Share the QR code with your payer Keep the app awake until payment settles","description":"Time: ~2 min","image":{"@type":"ImageObject","url":"https://buoybitcoin.com/images/screenshots/phoenix-receive.webp"}},{"@type":"HowToStep","position":3,"name":"3. Make a payment","text":"Tap Send and scan or paste a Lightning invoice Review the amount and memo, then confirm Wait for the success banner (Phoenix retries automatically if needed)","description":"Time: ~1 min","image":{"@type":"ImageObject","url":"https://buoybitcoin.com/images/screenshots/phoenix-pay.webp"}}],"estimatedCost":{"@type":"MonetaryAmount","currency":"USD","value":"0"}}</script></head>
 <body>
   <div class="container">
@@ -124,7 +124,7 @@
 </header>
  <main>
   <div class="category-header category-header--vs">
-   <h1 id="page-title">Phoenix</h1>
+   <h1 id="page-title">Phoenix<span class="visually-hidden"> Review: Fees, Features & Setup Guide</span></h1>
 <div class="page-updated" data-updated="2025-10-03">Updated: October 2025</div>
   </div>
 <div class="breadcrumb-back"><a href="/spend-bitcoin.html">< Back to Spend Bitcoin</a></div>
@@ -134,6 +134,10 @@
     <li><a href="/spend-bitcoin.html">Spend Bitcoin</a></li>
     <li><span aria-current="page">Phoenix</span></li>
   </ol>
+</nav>
+
+<nav class="jump-nav" aria-label="Jump to">
+  <a href="/services/phoenix.html#setup">Setup</a> • <a href="/services/phoenix.html#fees">Fees</a> • <a href="/services/phoenix.html#compat">Features</a> • <a href="/services/phoenix.html#migration">Migration</a> • <a href="/services/phoenix.html#privacy-safety">Privacy</a> • <a href="/services/phoenix.html#trust">Trust</a> • <a href="/services/phoenix.html#faq-heading">FAQs</a>
 </nav>
   <!-- BUILD:START -->
 <div class="service-sticky-cta">
@@ -281,60 +285,6 @@
 
 </section>
 
-<section id="privacy-safety" class="service-section" aria-labelledby="privacy-safety-label">
-  <h2 id="privacy-safety-label" class="feature-label">Privacy & Safety</h2>
-  <div class="privacy-cards">
-    <div class="privacy-card" id="data-flows">
-      <h3>Who can see what when you use Phoenix</h3>
-      <ul><li>Phoenix connects to ACINQ's Lightning node to route payments. Today, ACINQ can see who you pay and the amount needed to deliver your payment.</li><li>On-chain transactions are public by design; reuse of addresses can link activity.</li><li>Use your own <a href="#electrum-server" class="glossary-link" data-term="Electrum server">Electrum server</a> (Settings) to limit what third parties learn about your addresses and balances.</li><li>Lightning peers still observe timing/amount metadata needed for routing.</li></ul>
-      <div class="dodont-strip"><div class="dodont-item dodont-do"><img src="/images/checkmark.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Do:</strong> Connect your own <a href="#electrum-server" class="glossary-link" data-term="Electrum server">Electrum server</a> if privacy matters.</span></div><div class="dodont-item dodont-dont"><img src="/images/cross.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Don't:</strong> Assume Lightning is fully private. Some metadata still leaks via peers.</span></div></div>
-    </div>
-    <div class="privacy-card" id="recovery">
-      <h3>Lost your phone? How Phoenix recovery works</h3>
-      <ul><li>Your 12-word seed lives only on your phone. ACINQ can't recover it for you. Channel states are encrypted and synced so they can be restored.</li><li>Standard restore: install Phoenix → Restore my wallet → enter seed → keep the phone online while channels resync.</li><li>If Phoenix/ACINQ is unavailable: Settings → Danger zone → <a href="#force-close" class="glossary-link" data-term="Force close">Force close</a> channels. After ~720 blocks, funds appear in the <a href="#final-wallet" class="glossary-link" data-term="Final wallet">Final wallet</a>; then sweep on-chain.</li></ul>
-      <div class="dodont-strip"><div class="dodont-item dodont-do"><img src="/images/checkmark.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Do:</strong> Store your seed offline and test a small restore when convenient.</span></div><div class="dodont-item dodont-dont"><img src="/images/cross.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Don't:</strong> Run Phoenix on two phones at the same time.</span></div></div>
-    </div>
-    <div class="privacy-card" id="availability">
-      <h3>Availability &amp; safe installs</h3>
-      <ul><li>App-store availability and funding options vary by country—check your local listing and on-ramp.</li><li>Install only from the official developer (ACINQ) on Apple App Store or Google Play.</li><li>Avoid third-party APKs; they're a common source of malware.</li></ul>
-    </div>
-  </div>
-    <div class="micro-faqs">
-      <h3 class="micro-faqs__title">Quick answers</h3>
-      <div class="micro-faqs__list">
-      <details class="micro-faq-item" id="does-phoenix-work-with-my-own-node-or-electrum">
-        <summary>Does Phoenix work with my own node or Electrum?</summary>
-        <div>
-          <p>Yes. Connect your Electrum server to improve privacy; Lightning peers still see routing metadata.</p>
-        </div>
-      </details>
-      <details class="micro-faq-item" id="can-acinq-recover-my-wallet-if-i-lose-the-seed">
-        <summary>Can ACINQ recover my wallet if I lose the seed?</summary>
-        <div>
-          <p>No. The seed never leaves your device.</p>
-        </div>
-      </details>
-      <details class="micro-faq-item" id="what-if-acinq-disappears">
-        <summary>What if ACINQ disappears?</summary>
-        <div>
-          <p>Use Force close; funds appear in the Final wallet after confirmations, then sweep.</p>
-        </div>
-      </details>
-      </div>
-    </div>
-    <details class="mini-glossary">
-      <summary>Key terms</summary>
-      <dl>
-      <dt id="electrum-server">Electrum server</dt>
-      <dd>A server your wallet queries for balances/tx history. Running your own improves privacy.</dd>
-      <dt id="force-close">Force close</dt>
-      <dd>Shuts a Lightning channel on-chain without cooperation; slower and higher fees.</dd>
-      <dt id="final-wallet">Final wallet</dt>
-      <dd>On-chain funds after channels close; sweep when confirmed.</dd>
-      </dl>
-    </details>
-</section>
-
 <section id="compat" class="service-section">
   <h2 class="feature-label">What this Phoenix wallet can or can't do</h2>
   <div class="svc-compat__grid">
@@ -475,6 +425,60 @@
         </details>
       </div>
   </div>
+</section>
+
+<section id="privacy-safety" class="service-section" aria-labelledby="privacy-safety-label">
+  <h2 id="privacy-safety-label" class="feature-label">Privacy & Safety</h2>
+  <div class="privacy-cards">
+    <div class="privacy-card" id="data-flows">
+      <h3>Who can see what when you use Phoenix</h3>
+      <ul><li>Phoenix connects to ACINQ's Lightning node to route payments. Today, ACINQ can see who you pay and the amount needed to deliver your payment.</li><li>On-chain transactions are public by design; reuse of addresses can link activity.</li><li>Use your own <a href="#electrum-server" class="glossary-link" data-term="Electrum server">Electrum server</a> (Settings) to limit what third parties learn about your addresses and balances.</li><li>Lightning peers still observe timing/amount metadata needed for routing.</li></ul>
+      <div class="dodont-strip"><div class="dodont-item dodont-do"><img src="/images/checkmark.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Do:</strong> Connect your own <a href="#electrum-server" class="glossary-link" data-term="Electrum server">Electrum server</a> if privacy matters.</span></div><div class="dodont-item dodont-dont"><img src="/images/cross.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Don't:</strong> Assume Lightning is fully private. Some metadata still leaks via peers.</span></div></div>
+    </div>
+    <div class="privacy-card" id="recovery">
+      <h3>Lost your phone? How Phoenix recovery works</h3>
+      <ul><li>Your 12-word seed lives only on your phone. ACINQ can't recover it for you. Channel states are encrypted and synced so they can be restored.</li><li>Standard restore: install Phoenix → Restore my wallet → enter seed → keep the phone online while channels resync.</li><li>If Phoenix/ACINQ is unavailable: Settings → Danger zone → <a href="#force-close" class="glossary-link" data-term="Force close">Force close</a> channels. After ~720 blocks, funds appear in the <a href="#final-wallet" class="glossary-link" data-term="Final wallet">Final wallet</a>; then sweep on-chain.</li></ul>
+      <div class="dodont-strip"><div class="dodont-item dodont-do"><img src="/images/checkmark.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Do:</strong> Store your seed offline and test a small restore when convenient.</span></div><div class="dodont-item dodont-dont"><img src="/images/cross.svg" alt="" class="dodont-icon" aria-hidden="true" /><span><strong>Don't:</strong> Run Phoenix on two phones at the same time.</span></div></div>
+    </div>
+    <div class="privacy-card" id="availability">
+      <h3>Availability &amp; safe installs</h3>
+      <ul><li>App-store availability and funding options vary by country—check your local listing and on-ramp.</li><li>Install only from the official developer (ACINQ) on Apple App Store or Google Play.</li><li>Avoid third-party APKs; they're a common source of malware.</li></ul>
+    </div>
+  </div>
+    <div class="micro-faqs">
+      <h3 class="micro-faqs__title">Quick answers</h3>
+      <div class="micro-faqs__list">
+      <details class="micro-faq-item" id="does-phoenix-work-with-my-own-node-or-electrum">
+        <summary>Does Phoenix work with my own node or Electrum?</summary>
+        <div>
+          <p>Yes. Connect your Electrum server to improve privacy; Lightning peers still see routing metadata.</p>
+        </div>
+      </details>
+      <details class="micro-faq-item" id="can-acinq-recover-my-wallet-if-i-lose-the-seed">
+        <summary>Can ACINQ recover my wallet if I lose the seed?</summary>
+        <div>
+          <p>No. The seed never leaves your device.</p>
+        </div>
+      </details>
+      <details class="micro-faq-item" id="what-if-acinq-disappears">
+        <summary>What if ACINQ disappears?</summary>
+        <div>
+          <p>Use Force close; funds appear in the Final wallet after confirmations, then sweep.</p>
+        </div>
+      </details>
+      </div>
+    </div>
+    <details class="mini-glossary">
+      <summary>Key terms</summary>
+      <dl>
+      <dt id="electrum-server">Electrum server</dt>
+      <dd>A server your wallet queries for balances/tx history. Running your own improves privacy.</dd>
+      <dt id="force-close">Force close</dt>
+      <dd>Shuts a Lightning channel on-chain without cooperation; slower and higher fees.</dd>
+      <dt id="final-wallet">Final wallet</dt>
+      <dd>On-chain funds after channels close; sweep when confirmed.</dd>
+      </dl>
+    </details>
 </section>
 
 <section id="trust" class="service-section">
