--- a/services/umbrel.html
+++ b/services/umbrel.html
@@ -4,17 +4,17 @@
   <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Umbrel — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="Umbrel review: Home server as software and / or hardware for Run my own node. Compare fees, features, and setup guide."/>
+  <title>Umbrel Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin</title>
+  <meta name="description" content="Umbrel review 2025: Home server as software and / or hardware for Run my own node. Compare fees, features & setup guide."/>
   <link rel="canonical" href="https://buoybitcoin.com/services/umbrel.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/umbrel.html"/>
-  <meta property="og:title" content="Umbrel — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="Umbrel review: Home server as software and / or hardware for Run my own node. Compare fees, features, and setup guide."/>
+  <meta property="og:title" content="Umbrel Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta property="og:description" content="Umbrel review 2025: Home server as software and / or hardware for Run my own node. Compare fees, features & setup guide."/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Umbrel — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="Umbrel review: Home server as software and / or hardware for Run my own node. Compare fees, features, and setup guide."/>
+  <meta name="twitter:title" content="Umbrel Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="Umbrel review 2025: Home server as software and / or hardware for Run my own node. Compare fees, features & setup guide."/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=10">
@@ -43,7 +43,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/umbrel.html#webpage","name":"Umbrel — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/umbrel.html","inLanguage":"en","description":"Umbrel review: Home server as software and / or hardware for Run my own node. Compare fees, features, and setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/umbrel.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/umbrel.html#service","name":"Umbrel","url":"https://umbrel.com","mainEntityOfPage":"https://buoybitcoin.com/services/umbrel.html#webpage","description":"Umbrel is a user-friendly, plug‑and‑play home server OS primarily designed to run Bitcoin and Lightning nodes. It supports the official Umbrel Home hardware and installation on Raspberry Pi or x86 ma…","image":"https://buoybitcoin.com/images/umbrel.svg","serviceType":"Run my own node","areaServed":"Worldwide","offers":{"@type":"Offer","price":"299","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Umbrel","url":"https://umbrel.com"},"datePublished":"2019-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/umbrel.html#webpage","name":"Umbrel Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/umbrel.html","inLanguage":"en","description":"Umbrel review 2025: Home server as software and / or hardware for Run my own node. Compare fees, features & setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/umbrel.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/umbrel.html#service","name":"Umbrel","url":"https://umbrel.com","mainEntityOfPage":"https://buoybitcoin.com/services/umbrel.html#webpage","description":"Umbrel is a user-friendly, plug‑and‑play home server OS primarily designed to run Bitcoin and Lightning nodes. It supports the official Umbrel Home hardware and installation on Raspberry Pi or x86 ma…","image":"https://buoybitcoin.com/images/umbrel.svg","serviceType":"Run my own node","areaServed":"Worldwide","offers":{"@type":"Offer","price":"299","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Umbrel","url":"https://umbrel.com"},"datePublished":"2019-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Run my own node","item":"https://buoybitcoin.com/run-my-own-node.html"},{"@type":"ListItem","position":3,"name":"Umbrel","item":"https://buoybitcoin.com/services/umbrel.html"}]}</script></head>
 <body>
   <div class="container">
@@ -124,7 +124,7 @@
 </header>
  <main>
   <div class="category-header category-header--vs">
-   <h1 id="page-title">Umbrel</h1>
+   <h1 id="page-title">Umbrel<span class="visually-hidden"> Review: Fees, Features & Setup Guide</span></h1>
 <div class="page-updated" data-updated="2025-10-25">Updated: October 2025</div>
   </div>
 <div class="breadcrumb-back"><a href="/run-my-own-node.html">< Back to Run my own node</a></div>
@@ -134,6 +134,10 @@
     <li><a href="/run-my-own-node.html">Run my own node</a></li>
     <li><span aria-current="page">Umbrel</span></li>
   </ol>
+</nav>
+
+<nav class="jump-nav" aria-label="Jump to">
+  <a href="/services/umbrel.html#faq-heading">FAQs</a>
 </nav>
   <!-- BUILD:START -->
 <div class="service-sticky-cta">
