Accordion on mobile

--- a/services/lightspark.html
+++ b/services/lightspark.html
@@ -43,7 +43,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/lightspark.html#webpage","name":"Lightspark Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/lightspark.html","inLanguage":"en","description":"Lightspark review 2025: Payment Infrastructure for Accept Bitcoin as a merchant. Flexible: Supports self-custodial wallets via Spark; Managed nodes for enterpr…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/lightspark.html#service"},"dateModified":"2025-10-25"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/lightspark.html#service","name":"Lightspark","url":"https://www.lightspark.com","mainEntityOfPage":"https://buoybitcoin.com/services/lightspark.html#webpage","description":"Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the \"Money Grid,\" a global, open payment network…","image":"https://buoybitcoin.com/images/lightspark.svg","serviceType":"Accept Bitcoin as a merchant","areaServed":"Worldwide","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Lightspark","url":"https://www.lightspark.com"},"datePublished":"2022-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/lightspark.html#webpage","name":"Lightspark Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/lightspark.html","inLanguage":"en","description":"Lightspark review 2025: Payment Infrastructure for Accept Bitcoin as a merchant. Flexible: Supports self-custodial wallets via Spark; Managed nodes for enterpr…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/lightspark.html#service"},"dateModified":"2025-11-07"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/lightspark.html#service","name":"Lightspark","url":"https://www.lightspark.com","mainEntityOfPage":"https://buoybitcoin.com/services/lightspark.html#webpage","description":"Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the \"Money Grid,\" a global, open payment network…","image":"https://buoybitcoin.com/images/lightspark.svg","serviceType":"Accept Bitcoin as a merchant","areaServed":"Worldwide","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Lightspark","url":"https://www.lightspark.com"},"datePublished":"2022-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Accept Bitcoin as a merchant","item":"https://buoybitcoin.com/accept-bitcoin-as-a-merchant.html"},{"@type":"ListItem","position":3,"name":"Lightspark","item":"https://buoybitcoin.com/services/lightspark.html"}]}</script></head>
 <body>
   <div class="container">
@@ -125,7 +125,7 @@
  <main>
   <div class="category-header category-header--vs">
    <h1 id="page-title">Lightspark<span class="visually-hidden"> Review: Fees, Features & Setup Guide</span></h1>
-<div class="page-updated" data-updated="2025-10-25">Updated: October 2025</div>
+<div class="page-updated" data-updated="2025-11-07">Updated: November 2025</div>
   </div>
 <div class="breadcrumb-back"><a href="/accept-bitcoin-as-a-merchant.html">< Back to Accept Bitcoin as a merchant</a></div>
 <nav class="breadcrumbs" aria-label="Breadcrumb">
@@ -155,6 +155,8 @@
 </div>
 
 <div class="comparison-table">
+<details class="section-accordion">
+  <summary>Profile</summary>
 
 <section id="profile" class="service-section">
   <h2 class="feature-label">Profile</h2>
@@ -194,6 +196,7 @@
     </div>
   </div>
 </section>
+</details>
 </div>
 <!-- BUILD:END -->
 
@@ -417,6 +420,49 @@
       closeLightbox();
     }
   });
+})();
+</script>
+<!-- Mobile Section Accordions -->
+<script>
+(function() {
+  // Desktop: force all accordions open
+  if (window.innerWidth >= 768) {
+    document.addEventListener('DOMContentLoaded', function() {
+      document.querySelectorAll('.section-accordion').forEach(function(acc) {
+        acc.setAttribute('open', '');
+      });
+    });
+    return;
+  }
+  
+  // Mobile: open accordion if hash points to element inside it
+  function openAccordionForHash() {
+    const hash = window.location.hash;
+    if (!hash) return;
+    
+    try {
+      const target = document.querySelector(hash);
+      if (!target) return;
+      
+      // Find parent accordion
+      const accordion = target.closest('.section-accordion');
+      if (accordion && !accordion.open) {
+        accordion.open = true;
+      }
+    } catch (e) {
+      // Invalid selector, ignore
+    }
+  }
+  
+  // Run on page load
+  if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', openAccordionForHash);
+  } else {
+    openAccordionForHash();
+  }
+  
+  // Run when hash changes (clicking jump links, back/forward)
+  window.addEventListener('hashchange', openAccordionForHash);
 })();
 </script>
 </body>
