--- a/services/strike.html
+++ b/services/strike.html
@@ -164,6 +164,8 @@
     <p><img src="/images/cross.svg" alt="negative icon" class="checkmark-icon"/> <strong>Not ideal when:</strong> You require support for other cryptocurrencies or desktop trading.</p>
   </div>
 </section>
+<details class="section-accordion">
+  <summary>Getting started</summary>
 
 <section id="setup" class="service-section">
   <h2 class="feature-label">Getting started</h2>
@@ -227,6 +229,9 @@
   </div>
 
 </section>
+</details>
+<details class="section-accordion">
+  <summary>Fees: what you pay and when</summary>
 
 <section id="fees" class="service-section section-fees">
   <h2 class="fees-title">Fees: what you pay and when</h2>
@@ -321,6 +326,9 @@
   </details>
 
 </section>
+</details>
+<details class="section-accordion">
+  <summary>Payment methods & limits</summary>
 
 <section id="payment-methods" class="service-section">
   <h2 class="feature-label">Payment methods & limits</h2>
@@ -446,6 +454,9 @@
       </div>
   </div>
 </section>
+</details>
+<details class="section-accordion">
+  <summary>Strike features & limits</summary>
 
 <section id="compat" class="service-section">
   <h2 class="feature-label">Strike features & limits</h2>
@@ -509,6 +520,9 @@
       </div>
   </div>
 </section>
+</details>
+<details class="section-accordion">
+  <summary>Self-custody: withdraw safely</summary>
 
 <section id="self-custody" class="service-section">
   <h2 class="feature-label">Self-custody: withdraw safely</h2>
@@ -599,6 +613,9 @@
   </div>
 
 </section>
+</details>
+<details class="section-accordion">
+  <summary>Privacy & Safety</summary>
 
 <section id="privacy-safety" class="service-section" aria-labelledby="privacy-safety-label">
   <h2 id="privacy-safety-label" class="feature-label">Privacy & Safety</h2>
@@ -653,6 +670,9 @@
       </dl>
     </details>
 </section>
+</details>
+<details class="section-accordion">
+  <summary>Release & Trust</summary>
 
 <section id="trust" class="service-section">
   <h2 class="feature-label">Release &amp; Trust</h2>
@@ -699,6 +719,9 @@
     </div>
   </div>
 </section>
+</details>
+<details class="section-accordion">
+  <summary>Profile</summary>
 
 <section id="profile" class="service-section">
   <h2 class="feature-label">Profile</h2>
@@ -738,6 +761,7 @@
     </div>
   </div>
 </section>
+</details>
 </div>
 <!-- BUILD:END -->
 
@@ -1043,6 +1067,49 @@
       closeLightbox();
     }
   });
+})();
+</script>
+<!-- Mobile Section Accordions -->
+<script>
+(function() {
+  // Desktop: force all accordions open
+  if (window.innerWidth >= 768) {
+    document.addEventListener('DOMContentLoaded', function() {
+      document.querySelectorAll('.section-accordion').forEach(function(acc) {
+        acc.setAttribute('open', '');
+      });
+    });
+    return;
+  }
+  
+  // Mobile: open accordion if hash points to element inside it
+  function openAccordionForHash() {
+    const hash = window.location.hash;
+    if (!hash) return;
+    
+    try {
+      const target = document.querySelector(hash);
+      if (!target) return;
+      
+      // Find parent accordion
+      const accordion = target.closest('.section-accordion');
+      if (accordion && !accordion.open) {
+        accordion.open = true;
+      }
+    } catch (e) {
+      // Invalid selector, ignore
+    }
+  }
+  
+  // Run on page load
+  if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', openAccordionForHash);
+  } else {
+    openAccordionForHash();
+  }
+  
+  // Run when hash changes (clicking jump links, back/forward)
+  window.addEventListener('hashchange', openAccordionForHash);
 })();
 </script>
 </body>
