--- a/services/strike.html
+++ b/services/strike.html
@@ -709,7 +709,7 @@
     </div>
     <div>
       <div class="feature-label sublabel"></div>
-      <div class="svc-compat__tile" id="trust-privacy_withdrawal">
+      <div class="svc-compat__tile" id="trust-privacy_notice">
         <div class="trust-card-body">
           
           <p class="trust-card-fact">Privacy notice October 2025</p>
