--- a/services/strike.html
+++ b/services/strike.html
@@ -708,10 +708,10 @@
       </div>
     </div>
     <div>
-      <div class="feature-label sublabel"></div>
-      <div class="svc-compat__tile" id="trust-privacy_notice">
+      <div class="feature-label sublabel">Privacy policy</div>
+      <div class="svc-compat__tile" id="trust-privacy">
         <div class="trust-card-body">
-          
+          <img src="/images/privacy.svg" alt="" class="trust-card-icon" aria-hidden="true" />
           <p class="trust-card-fact">Privacy notice October 2025</p>
           <a href="https://strike.me/legal/privacy/" target="_blank" class="trust-card-link">Privacy notice</a>
         </div>
